Kaggle Notebook |  Jigsaw - Agile Community Rules Classification | Version 9

--- a/jigsaw-agile-community-rules-classification.ipynb
+++ b/jigsaw-agile-community-rules-classification.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9c2271a6",
+   "id": "25ea9b5c",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2025-07-29T19:40:43.271450Z",
-     "iopub.status.busy": "2025-07-29T19:40:43.271187Z",
-     "iopub.status.idle": "2025-07-29T19:40:44.592557Z",
-     "shell.execute_reply": "2025-07-29T19:40:44.591682Z"
+     "iopub.execute_input": "2025-07-29T19:50:07.989845Z",
+     "iopub.status.busy": "2025-07-29T19:50:07.989371Z",
+     "iopub.status.idle": "2025-07-29T19:50:10.372104Z",
+     "shell.execute_reply": "2025-07-29T19:50:10.370896Z"
     },
     "papermill": {
-     "duration": 1.326819,
-     "end_time": "2025-07-29T19:40:44.594044",
+     "duration": 2.39058,
+     "end_time": "2025-07-29T19:50:10.373906",
      "exception": false,
-     "start_time": "2025-07-29T19:40:43.267225",
+     "start_time": "2025-07-29T19:50:07.983326",
      "status": "completed"
     },
     "tags": []
@@ -46,13 +46,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90dea705",
+   "id": "b5f96acc",
    "metadata": {
     "papermill": {
-     "duration": 0.001677,
-     "end_time": "2025-07-29T19:40:44.598301",
+     "duration": 0.002324,
+     "end_time": "2025-07-29T19:50:10.379519",
      "exception": false,
-     "start_time": "2025-07-29T19:40:44.596624",
+     "start_time": "2025-07-29T19:50:10.377195",
      "status": "completed"
     },
     "tags": []
@@ -64,19 +64,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5705869e",
+   "id": "e1de6170",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T19:40:44.603210Z",
-     "iopub.status.busy": "2025-07-29T19:40:44.602857Z",
-     "iopub.status.idle": "2025-07-29T19:40:44.699856Z",
-     "shell.execute_reply": "2025-07-29T19:40:44.699187Z"
+     "iopub.execute_input": "2025-07-29T19:50:10.386011Z",
+     "iopub.status.busy": "2025-07-29T19:50:10.385531Z",
+     "iopub.status.idle": "2025-07-29T19:50:10.515529Z",
+     "shell.execute_reply": "2025-07-29T19:50:10.514417Z"
     },
     "papermill": {
-     "duration": 0.100742,
-     "end_time": "2025-07-29T19:40:44.700948",
+     "duration": 0.135462,
+     "end_time": "2025-07-29T19:50:10.517505",
      "exception": false,
-     "start_time": "2025-07-29T19:40:44.600206",
+     "start_time": "2025-07-29T19:50:10.382043",
      "status": "completed"
     },
     "tags": []
@@ -240,19 +240,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f5d53820",
+   "id": "25a3d0b7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T19:40:44.706672Z",
-     "iopub.status.busy": "2025-07-29T19:40:44.706436Z",
-     "iopub.status.idle": "2025-07-29T19:40:44.720035Z",
-     "shell.execute_reply": "2025-07-29T19:40:44.719184Z"
+     "iopub.execute_input": "2025-07-29T19:50:10.524725Z",
+     "iopub.status.busy": "2025-07-29T19:50:10.524430Z",
+     "iopub.status.idle": "2025-07-29T19:50:10.543084Z",
+     "shell.execute_reply": "2025-07-29T19:50:10.541872Z"
     },
     "papermill": {
-     "duration": 0.018072,
-     "end_time": "2025-07-29T19:40:44.721463",
+     "duration": 0.024239,
+     "end_time": "2025-07-29T19:50:10.544838",
      "exception": false,
-     "start_time": "2025-07-29T19:40:44.703391",
+     "start_time": "2025-07-29T19:50:10.520599",
      "status": "completed"
     },
     "tags": []
@@ -279,19 +279,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7bf40106",
+   "id": "17767008",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T19:40:44.726918Z",
-     "iopub.status.busy": "2025-07-29T19:40:44.726646Z",
-     "iopub.status.idle": "2025-07-29T19:40:44.733186Z",
-     "shell.execute_reply": "2025-07-29T19:40:44.732636Z"
+     "iopub.execute_input": "2025-07-29T19:50:10.552250Z",
+     "iopub.status.busy": "2025-07-29T19:50:10.551940Z",
+     "iopub.status.idle": "2025-07-29T19:50:10.560834Z",
+     "shell.execute_reply": "2025-07-29T19:50:10.559862Z"
     },
     "papermill": {
-     "duration": 0.010466,
-     "end_time": "2025-07-29T19:40:44.734375",
+     "duration": 0.014273,
+     "end_time": "2025-07-29T19:50:10.562273",
      "exception": false,
-     "start_time": "2025-07-29T19:40:44.723909",
+     "start_time": "2025-07-29T19:50:10.548000",
      "status": "completed"
     },
     "tags": []
@@ -324,19 +324,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9153dabb",
+   "id": "10ae1fc5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T19:40:44.740211Z",
-     "iopub.status.busy": "2025-07-29T19:40:44.739576Z",
-     "iopub.status.idle": "2025-07-29T19:40:44.752653Z",
-     "shell.execute_reply": "2025-07-29T19:40:44.752034Z"
+     "iopub.execute_input": "2025-07-29T19:50:10.570525Z",
+     "iopub.status.busy": "2025-07-29T19:50:10.569894Z",
+     "iopub.status.idle": "2025-07-29T19:50:10.591000Z",
+     "shell.execute_reply": "2025-07-29T19:50:10.589778Z"
     },
     "papermill": {
-     "duration": 0.016798,
-     "end_time": "2025-07-29T19:40:44.753690",
+     "duration": 0.0274,
+     "end_time": "2025-07-29T19:50:10.592739",
      "exception": false,
-     "start_time": "2025-07-29T19:40:44.736892",
+     "start_time": "2025-07-29T19:50:10.565339",
      "status": "completed"
     },
     "tags": []
@@ -369,19 +369,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d155df89",
+   "id": "5a1bb6dc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T19:40:44.759762Z",
-     "iopub.status.busy": "2025-07-29T19:40:44.759174Z",
-     "iopub.status.idle": "2025-07-29T19:40:46.746101Z",
-     "shell.execute_reply": "2025-07-29T19:40:46.745578Z"
+     "iopub.execute_input": "2025-07-29T19:50:10.600403Z",
+     "iopub.status.busy": "2025-07-29T19:50:10.599975Z",
+     "iopub.status.idle": "2025-07-29T19:50:13.541917Z",
+     "shell.execute_reply": "2025-07-29T19:50:13.540903Z"
     },
     "papermill": {
-     "duration": 1.992183,
-     "end_time": "2025-07-29T19:40:46.748240",
+     "duration": 2.949252,
+     "end_time": "2025-07-29T19:50:13.545005",
      "exception": false,
-     "start_time": "2025-07-29T19:40:44.756057",
+     "start_time": "2025-07-29T19:50:10.595753",
      "status": "completed"
     },
     "tags": []
@@ -414,69 +414,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c9bc0284",
+   "id": "ea880c61",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T19:40:46.756518Z",
-     "iopub.status.busy": "2025-07-29T19:40:46.756102Z",
-     "iopub.status.idle": "2025-07-29T19:40:47.340783Z",
-     "shell.execute_reply": "2025-07-29T19:40:47.339967Z"
+     "iopub.execute_input": "2025-07-29T19:50:13.560631Z",
+     "iopub.status.busy": "2025-07-29T19:50:13.559497Z",
+     "iopub.status.idle": "2025-07-29T19:50:14.790012Z",
+     "shell.execute_reply": "2025-07-29T19:50:14.788887Z"
     },
     "papermill": {
-     "duration": 0.590133,
-     "end_time": "2025-07-29T19:40:47.342039",
+     "duration": 1.239095,
+     "end_time": "2025-07-29T19:50:14.792408",
      "exception": false,
-     "start_time": "2025-07-29T19:40:46.751906",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mean AUC: 0.8091725588922051\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "from scipy.sparse import hstack\n",
-    "\n",
-    "# Subreddit ve Rule label encoding\n",
-    "le_subreddit = LabelEncoder()\n",
-    "le_rule = LabelEncoder()\n",
-    "subreddit_encoded = le_subreddit.fit_transform(df_train['subreddit'])\n",
-    "rule_encoded = le_rule.fit_transform(df_train['rule'])\n",
-    "\n",
-    "# TF-IDF + subreddit + rule birleşimi\n",
-    "X_text = vectorizer.fit_transform(df_train['body'])\n",
-    "X_combined = hstack([X_text, subreddit_encoded.reshape(-1, 1), rule_encoded.reshape(-1, 1)])\n",
-    "\n",
-    "\n",
-    "# Model\n",
-    "model = LogisticRegression(max_iter=1000)\n",
-    "auc = cross_val_score(model, X, y, cv=5, scoring='roc_auc')\n",
-    "print(\"Mean AUC:\", auc.mean())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "8522713c",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-07-29T19:40:47.349498Z",
-     "iopub.status.busy": "2025-07-29T19:40:47.349275Z",
-     "iopub.status.idle": "2025-07-29T19:40:48.075940Z",
-     "shell.execute_reply": "2025-07-29T19:40:48.075161Z"
-    },
-    "papermill": {
-     "duration": 0.732193,
-     "end_time": "2025-07-29T19:40:48.077684",
-     "exception": false,
-     "start_time": "2025-07-29T19:40:47.345491",
+     "start_time": "2025-07-29T19:50:13.553313",
      "status": "completed"
     },
     "tags": []
@@ -518,20 +468,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "ae5bbc77",
+   "execution_count": 8,
+   "id": "7bcf01b8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T19:40:48.086973Z",
-     "iopub.status.busy": "2025-07-29T19:40:48.086526Z",
-     "iopub.status.idle": "2025-07-29T19:40:49.052857Z",
-     "shell.execute_reply": "2025-07-29T19:40:49.052354Z"
+     "iopub.execute_input": "2025-07-29T19:50:14.802600Z",
+     "iopub.status.busy": "2025-07-29T19:50:14.802149Z",
+     "iopub.status.idle": "2025-07-29T19:50:15.008557Z",
+     "shell.execute_reply": "2025-07-29T19:50:15.005946Z"
     },
     "papermill": {
-     "duration": 0.972831,
-     "end_time": "2025-07-29T19:40:49.054309",
+     "duration": 0.214761,
+     "end_time": "2025-07-29T19:50:15.011887",
      "exception": false,
-     "start_time": "2025-07-29T19:40:48.081478",
+     "start_time": "2025-07-29T19:50:14.797126",
      "status": "completed"
     },
     "tags": []
@@ -541,33 +491,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "submission.csv başarıyla oluşturuldu!\n"
+      "✅ submission.csv başarıyla oluşturuldu.\n"
      ]
     }
    ],
    "source": [
-    "subreddit_test = le_subreddit.transform(df_test['subreddit'])\n",
-    "rule_test = le_rule.transform(df_test['rule'])\n",
+    "# Test verisini dönüştür\n",
+    "X_test = vectorizer.transform(df_test['body'])\n",
     "\n",
-    "X_test_text = vectorizer.transform(df_test['body'])\n",
-    "X_test_combined = hstack([\n",
-    "    X_test_text,\n",
-    "    subreddit_test.reshape(-1, 1),\n",
-    "    rule_test.reshape(-1, 1)\n",
-    "])\n",
+    "# Modeli tüm veride yeniden eğit\n",
+    "model.fit(X, y)\n",
     "\n",
-    "model = LogisticRegression(max_iter=1000)\n",
-    "model.fit(X_combined, y)\n",
+    "# Olasılık tahminleri (rule_violation için)\n",
+    "y_test_pred = model.predict_proba(X_test)[:, 1]\n",
     "\n",
-    "y_test_pred = model.predict_proba(X_test_combined)[:, 1]\n",
-    "\n",
+    "# Submission dosyasını oluştur\n",
     "submission = pd.DataFrame({\n",
     "    'row_id': df_test['row_id'],\n",
     "    'rule_violation': y_test_pred\n",
     "})\n",
     "submission.to_csv('submission.csv', index=False)\n",
     "\n",
-    "print(\"submission.csv başarıyla oluşturuldu!\")\n"
+    "print(\"✅ submission.csv başarıyla oluşturuldu.\")"
    ]
   }
  ],
@@ -605,14 +550,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 10.083691,
-   "end_time": "2025-07-29T19:40:49.675634",
+   "duration": 15.564322,
+   "end_time": "2025-07-29T19:50:17.755929",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2025-07-29T19:40:39.591943",
+   "start_time": "2025-07-29T19:50:02.191607",
    "version": "2.6.0"
   }
  },
