Kaggle Notebook | JigSaw | Version 4

--- a/jigsaw.ipynb
+++ b/jigsaw.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e31453fa",
+   "id": "b2c53b1c",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2025-07-30T09:26:35.728969Z",
-     "iopub.status.busy": "2025-07-30T09:26:35.728309Z",
-     "iopub.status.idle": "2025-07-30T09:26:37.401712Z",
-     "shell.execute_reply": "2025-07-30T09:26:37.400823Z"
+     "iopub.execute_input": "2025-07-30T10:01:11.734391Z",
+     "iopub.status.busy": "2025-07-30T10:01:11.734040Z",
+     "iopub.status.idle": "2025-07-30T10:01:13.345539Z",
+     "shell.execute_reply": "2025-07-30T10:01:13.344334Z"
     },
     "papermill": {
-     "duration": 1.678238,
-     "end_time": "2025-07-30T09:26:37.403056",
+     "duration": 1.617168,
+     "end_time": "2025-07-30T10:01:13.347350",
      "exception": false,
-     "start_time": "2025-07-30T09:26:35.724818",
+     "start_time": "2025-07-30T10:01:11.730182",
      "status": "completed"
     },
     "tags": []
@@ -46,19 +46,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "11a8dfff",
+   "id": "412e936d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-30T09:26:37.408363Z",
-     "iopub.status.busy": "2025-07-30T09:26:37.407997Z",
-     "iopub.status.idle": "2025-07-30T09:27:11.993556Z",
-     "shell.execute_reply": "2025-07-30T09:27:11.992749Z"
+     "iopub.execute_input": "2025-07-30T10:01:13.352829Z",
+     "iopub.status.busy": "2025-07-30T10:01:13.352447Z",
+     "iopub.status.idle": "2025-07-30T10:01:48.378363Z",
+     "shell.execute_reply": "2025-07-30T10:01:48.377452Z"
     },
     "papermill": {
-     "duration": 34.589528,
-     "end_time": "2025-07-30T09:27:11.995079",
+     "duration": 35.03064,
+     "end_time": "2025-07-30T10:01:48.380293",
      "exception": false,
-     "start_time": "2025-07-30T09:26:37.405551",
+     "start_time": "2025-07-30T10:01:13.349653",
      "status": "completed"
     },
     "tags": []
@@ -68,10 +68,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-07-30 09:26:56.844730: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2025-07-30 10:01:32.493925: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
       "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1753867617.064459      13 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1753867617.132789      13 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n"
+      "E0000 00:00:1753869692.700094      13 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1753869692.755157      13 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n"
      ]
     }
    ],
@@ -90,19 +90,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a41e1532",
+   "id": "ae44dd0d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-30T09:27:12.000352Z",
-     "iopub.status.busy": "2025-07-30T09:27:11.999729Z",
-     "iopub.status.idle": "2025-07-30T09:27:12.099221Z",
-     "shell.execute_reply": "2025-07-30T09:27:12.098509Z"
+     "iopub.execute_input": "2025-07-30T10:01:48.386601Z",
+     "iopub.status.busy": "2025-07-30T10:01:48.385192Z",
+     "iopub.status.idle": "2025-07-30T10:01:48.495615Z",
+     "shell.execute_reply": "2025-07-30T10:01:48.494606Z"
     },
     "papermill": {
-     "duration": 0.103655,
-     "end_time": "2025-07-30T09:27:12.100776",
+     "duration": 0.114877,
+     "end_time": "2025-07-30T10:01:48.497367",
      "exception": false,
-     "start_time": "2025-07-30T09:27:11.997121",
+     "start_time": "2025-07-30T10:01:48.382490",
      "status": "completed"
     },
     "tags": []
@@ -119,19 +119,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "87fd3eac",
+   "id": "3b732c3a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-30T09:27:12.105496Z",
-     "iopub.status.busy": "2025-07-30T09:27:12.105164Z",
-     "iopub.status.idle": "2025-07-30T09:27:25.427594Z",
-     "shell.execute_reply": "2025-07-30T09:27:25.426570Z"
+     "iopub.execute_input": "2025-07-30T10:01:48.502768Z",
+     "iopub.status.busy": "2025-07-30T10:01:48.502409Z",
+     "iopub.status.idle": "2025-07-30T10:02:05.199742Z",
+     "shell.execute_reply": "2025-07-30T10:02:05.198357Z"
     },
     "papermill": {
-     "duration": 13.32641,
-     "end_time": "2025-07-30T09:27:25.429075",
+     "duration": 16.702049,
+     "end_time": "2025-07-30T10:02:05.201445",
      "exception": false,
-     "start_time": "2025-07-30T09:27:12.102665",
+     "start_time": "2025-07-30T10:01:48.499396",
      "status": "completed"
     },
     "tags": []
@@ -142,13 +142,21 @@
      "output_type": "stream",
      "text": [
       "[LightGBM] [Info] Number of positive: 928, number of negative: 898\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.053827 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.060279 seconds.\n",
       "You can set `force_col_wise=true` to remove the overhead.\n",
-      "[LightGBM] [Info] Total Bins 70322\n",
-      "[LightGBM] [Info] Number of data points in the train set: 1826, number of used features: 3698\n",
+      "[LightGBM] [Info] Total Bins 70609\n",
+      "[LightGBM] [Info] Number of data points in the train set: 1826, number of used features: 3702\n",
       "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.508215 -> initscore=0.032862\n",
       "[LightGBM] [Info] Start training from score 0.032862\n",
-      "✅ submission.csv başarıyla oluşturuldu.\n"
+      "✅ submission.csv oluşturuldu.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.11/dist-packages/lightgbm/basic.py:1218: UserWarning: Converting data to scipy sparse matrix.\n",
+      "  _log_warning(\"Converting data to scipy sparse matrix.\")\n"
      ]
     }
    ],
@@ -156,10 +164,22 @@
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from lightgbm import LGBMClassifier\n",
     "import pandas as pd\n",
+    "from scipy.sparse import hstack\n",
+    "\n",
+    "for df in [df_train, df_test]:\n",
+    "    df['body_len'] = df['body'].apply(len)\n",
+    "    df['num_links'] = df['body'].str.count(r\"http\\S+\")\n",
+    "    df['num_exclaims'] = df['body'].str.count('!')\n",
+    "    df['num_upper'] = df['body'].str.count(r'[A-Z]{2,}')\n",
+    "\n",
+    "meta_features = ['body_len', 'num_links', 'num_exclaims', 'num_upper']\n",
     "\n",
     "vectorizer = TfidfVectorizer(analyzer='char_wb', ngram_range=(4, 6), max_features=50000)\n",
-    "X = vectorizer.fit_transform(df_train['body'])\n",
-    "X_test = vectorizer.transform(df_test['body'])\n",
+    "X_tfidf = vectorizer.fit_transform(df_train['body'])\n",
+    "X_test_tfidf = vectorizer.transform(df_test['body'])\n",
+    "\n",
+    "X = hstack([X_tfidf, df_train[meta_features].values])\n",
+    "X_test = hstack([X_test_tfidf, df_test[meta_features].values])\n",
     "\n",
     "model = LGBMClassifier(n_estimators=500, random_state=42)\n",
     "model.fit(X, df_train['rule_violation'])\n",
@@ -171,7 +191,7 @@
     "    'rule_violation': y_pred\n",
     "})\n",
     "submission.to_csv(\"submission.csv\", index=False)\n",
-    "print(\"✅ submission.csv başarıyla oluşturuldu.\")\n"
+    "print(\"✅ submission.csv oluşturuldu.\")\n"
    ]
   }
  ],
@@ -187,7 +207,7 @@
    ],
    "dockerImageVersionId": 31089,
    "isGpuEnabled": false,
-   "isInternetEnabled": true,
+   "isInternetEnabled": false,
    "language": "python",
    "sourceType": "notebook"
   },
@@ -210,14 +230,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 57.064039,
-   "end_time": "2025-07-30T09:27:28.381392",
+   "duration": 61.083385,
+   "end_time": "2025-07-30T10:02:08.259794",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2025-07-30T09:26:31.317353",
+   "start_time": "2025-07-30T10:01:07.176409",
    "version": "2.6.0"
   }
  },
