Kaggle Notebook | JigSaw | Version 5

--- a/jigsaw.ipynb
+++ b/jigsaw.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b2c53b1c",
+   "id": "be7f2886",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2025-07-30T10:01:11.734391Z",
-     "iopub.status.busy": "2025-07-30T10:01:11.734040Z",
-     "iopub.status.idle": "2025-07-30T10:01:13.345539Z",
-     "shell.execute_reply": "2025-07-30T10:01:13.344334Z"
+     "iopub.execute_input": "2025-07-30T10:15:59.938532Z",
+     "iopub.status.busy": "2025-07-30T10:15:59.938121Z",
+     "iopub.status.idle": "2025-07-30T10:16:01.791807Z",
+     "shell.execute_reply": "2025-07-30T10:16:01.790830Z"
     },
     "papermill": {
-     "duration": 1.617168,
-     "end_time": "2025-07-30T10:01:13.347350",
+     "duration": 1.859209,
+     "end_time": "2025-07-30T10:16:01.793316",
      "exception": false,
-     "start_time": "2025-07-30T10:01:11.730182",
+     "start_time": "2025-07-30T10:15:59.934107",
      "status": "completed"
     },
     "tags": []
@@ -46,19 +46,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "412e936d",
+   "id": "87bb2c1c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-30T10:01:13.352829Z",
-     "iopub.status.busy": "2025-07-30T10:01:13.352447Z",
-     "iopub.status.idle": "2025-07-30T10:01:48.378363Z",
-     "shell.execute_reply": "2025-07-30T10:01:48.377452Z"
+     "iopub.execute_input": "2025-07-30T10:16:01.799512Z",
+     "iopub.status.busy": "2025-07-30T10:16:01.799098Z",
+     "iopub.status.idle": "2025-07-30T10:16:35.990273Z",
+     "shell.execute_reply": "2025-07-30T10:16:35.989537Z"
     },
     "papermill": {
-     "duration": 35.03064,
-     "end_time": "2025-07-30T10:01:48.380293",
+     "duration": 34.195748,
+     "end_time": "2025-07-30T10:16:35.991810",
      "exception": false,
-     "start_time": "2025-07-30T10:01:13.349653",
+     "start_time": "2025-07-30T10:16:01.796062",
      "status": "completed"
     },
     "tags": []
@@ -68,10 +68,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-07-30 10:01:32.493925: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2025-07-30 10:16:20.823573: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
       "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1753869692.700094      13 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1753869692.755157      13 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n"
+      "E0000 00:00:1753870580.988819      13 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1753870581.039715      13 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n"
      ]
     }
    ],
@@ -90,19 +90,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ae44dd0d",
+   "id": "736eb938",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-30T10:01:48.386601Z",
-     "iopub.status.busy": "2025-07-30T10:01:48.385192Z",
-     "iopub.status.idle": "2025-07-30T10:01:48.495615Z",
-     "shell.execute_reply": "2025-07-30T10:01:48.494606Z"
+     "iopub.execute_input": "2025-07-30T10:16:35.997662Z",
+     "iopub.status.busy": "2025-07-30T10:16:35.997023Z",
+     "iopub.status.idle": "2025-07-30T10:16:36.089671Z",
+     "shell.execute_reply": "2025-07-30T10:16:36.088844Z"
     },
     "papermill": {
-     "duration": 0.114877,
-     "end_time": "2025-07-30T10:01:48.497367",
+     "duration": 0.097113,
+     "end_time": "2025-07-30T10:16:36.091333",
      "exception": false,
-     "start_time": "2025-07-30T10:01:48.382490",
+     "start_time": "2025-07-30T10:16:35.994220",
      "status": "completed"
     },
     "tags": []
@@ -119,52 +119,26 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3b732c3a",
+   "id": "f56b42cb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-30T10:01:48.502768Z",
-     "iopub.status.busy": "2025-07-30T10:01:48.502409Z",
-     "iopub.status.idle": "2025-07-30T10:02:05.199742Z",
-     "shell.execute_reply": "2025-07-30T10:02:05.198357Z"
+     "iopub.execute_input": "2025-07-30T10:16:36.098234Z",
+     "iopub.status.busy": "2025-07-30T10:16:36.097056Z",
+     "iopub.status.idle": "2025-07-30T10:16:37.092129Z",
+     "shell.execute_reply": "2025-07-30T10:16:37.091104Z"
     },
     "papermill": {
-     "duration": 16.702049,
-     "end_time": "2025-07-30T10:02:05.201445",
+     "duration": 1.00033,
+     "end_time": "2025-07-30T10:16:37.094063",
      "exception": false,
-     "start_time": "2025-07-30T10:01:48.499396",
+     "start_time": "2025-07-30T10:16:36.093733",
      "status": "completed"
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[LightGBM] [Info] Number of positive: 928, number of negative: 898\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.060279 seconds.\n",
-      "You can set `force_col_wise=true` to remove the overhead.\n",
-      "[LightGBM] [Info] Total Bins 70609\n",
-      "[LightGBM] [Info] Number of data points in the train set: 1826, number of used features: 3702\n",
-      "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.508215 -> initscore=0.032862\n",
-      "[LightGBM] [Info] Start training from score 0.032862\n",
-      "✅ submission.csv oluşturuldu.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.11/dist-packages/lightgbm/basic.py:1218: UserWarning: Converting data to scipy sparse matrix.\n",
-      "  _log_warning(\"Converting data to scipy sparse matrix.\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from lightgbm import LGBMClassifier\n",
-    "import pandas as pd\n",
-    "from scipy.sparse import hstack\n",
     "\n",
     "for df in [df_train, df_test]:\n",
     "    df['body_len'] = df['body'].apply(len)\n",
@@ -174,24 +148,188 @@
     "\n",
     "meta_features = ['body_len', 'num_links', 'num_exclaims', 'num_upper']\n",
     "\n",
-    "vectorizer = TfidfVectorizer(analyzer='char_wb', ngram_range=(4, 6), max_features=50000)\n",
-    "X_tfidf = vectorizer.fit_transform(df_train['body'])\n",
-    "X_test_tfidf = vectorizer.transform(df_test['body'])\n",
+    "# Word-level TF-IDF\n",
+    "word_vectorizer = TfidfVectorizer(analyzer='word', ngram_range=(1, 2), max_features=20000, stop_words='english')\n",
+    "X_word = word_vectorizer.fit_transform(df_train['body'])\n",
+    "X_test_word = word_vectorizer.transform(df_test['body'])\n",
     "\n",
-    "X = hstack([X_tfidf, df_train[meta_features].values])\n",
-    "X_test = hstack([X_test_tfidf, df_test[meta_features].values])\n",
+    "# Char-level TF-IDF\n",
+    "char_vectorizer = TfidfVectorizer(analyzer='char_wb', ngram_range=(4, 6), max_features=30000)\n",
+    "X_char = char_vectorizer.fit_transform(df_train['body'])\n",
+    "X_test_char = char_vectorizer.transform(df_test['body'])\n",
     "\n",
-    "model = LGBMClassifier(n_estimators=500, random_state=42)\n",
-    "model.fit(X, df_train['rule_violation'])\n",
+    "# Meta matrisi\n",
+    "X_meta = df_train[meta_features].values\n",
+    "X_test_meta = df_test[meta_features].values\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "fd44f70b",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-07-30T10:16:37.099911Z",
+     "iopub.status.busy": "2025-07-30T10:16:37.099561Z",
+     "iopub.status.idle": "2025-07-30T10:16:37.138879Z",
+     "shell.execute_reply": "2025-07-30T10:16:37.138105Z"
+    },
+    "papermill": {
+     "duration": 0.043985,
+     "end_time": "2025-07-30T10:16:37.140402",
+     "exception": false,
+     "start_time": "2025-07-30T10:16:37.096417",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from scipy.sparse import hstack, csr_matrix\n",
     "\n",
-    "y_pred = model.predict_proba(X_test)[:, 1]\n",
+    "X = hstack([X_word, X_char, X_meta])\n",
+    "X_test = hstack([X_test_word, X_test_char, X_test_meta])\n",
     "\n",
+    "X = csr_matrix(X)\n",
+    "X_test = csr_matrix(X_test)\n",
+    "y = df_train['rule_violation'].values\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2fe3b183",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-07-30T10:16:37.146602Z",
+     "iopub.status.busy": "2025-07-30T10:16:37.145862Z",
+     "iopub.status.idle": "2025-07-30T10:17:18.645902Z",
+     "shell.execute_reply": "2025-07-30T10:17:18.644856Z"
+    },
+    "papermill": {
+     "duration": 41.504536,
+     "end_time": "2025-07-30T10:17:18.647338",
+     "exception": false,
+     "start_time": "2025-07-30T10:16:37.142802",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[LightGBM] [Info] Number of positive: 742, number of negative: 718\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.037361 seconds.\n",
+      "You can set `force_row_wise=true` to remove the overhead.\n",
+      "And if memory is not enough, you can set `force_col_wise=true`.\n",
+      "[LightGBM] [Info] Total Bins 53912\n",
+      "[LightGBM] [Info] Number of data points in the train set: 1460, number of used features: 2950\n",
+      "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.508219 -> initscore=0.032880\n",
+      "[LightGBM] [Info] Start training from score 0.032880\n",
+      "Fold 1 AUC: 0.8229\n",
+      "[LightGBM] [Info] Number of positive: 742, number of negative: 719\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.036407 seconds.\n",
+      "You can set `force_row_wise=true` to remove the overhead.\n",
+      "And if memory is not enough, you can set `force_col_wise=true`.\n",
+      "[LightGBM] [Info] Total Bins 54766\n",
+      "[LightGBM] [Info] Number of data points in the train set: 1461, number of used features: 2987\n",
+      "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.507871 -> initscore=0.031488\n",
+      "[LightGBM] [Info] Start training from score 0.031488\n",
+      "Fold 2 AUC: 0.8522\n",
+      "[LightGBM] [Info] Number of positive: 742, number of negative: 719\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.047327 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
+      "[LightGBM] [Info] Total Bins 52593\n",
+      "[LightGBM] [Info] Number of data points in the train set: 1461, number of used features: 2934\n",
+      "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.507871 -> initscore=0.031488\n",
+      "[LightGBM] [Info] Start training from score 0.031488\n",
+      "Fold 3 AUC: 0.8189\n",
+      "[LightGBM] [Info] Number of positive: 743, number of negative: 718\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.038269 seconds.\n",
+      "You can set `force_row_wise=true` to remove the overhead.\n",
+      "And if memory is not enough, you can set `force_col_wise=true`.\n",
+      "[LightGBM] [Info] Total Bins 55618\n",
+      "[LightGBM] [Info] Number of data points in the train set: 1461, number of used features: 3066\n",
+      "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.508556 -> initscore=0.034226\n",
+      "[LightGBM] [Info] Start training from score 0.034226\n",
+      "Fold 4 AUC: 0.8527\n",
+      "[LightGBM] [Info] Number of positive: 743, number of negative: 718\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.036534 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
+      "[LightGBM] [Info] Total Bins 54611\n",
+      "[LightGBM] [Info] Number of data points in the train set: 1461, number of used features: 2985\n",
+      "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.508556 -> initscore=0.034226\n",
+      "[LightGBM] [Info] Start training from score 0.034226\n",
+      "Fold 5 AUC: 0.8053\n",
+      "\n",
+      "✅ Mean OOF AUC: 0.8293273846094769\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "from sklearn.metrics import roc_auc_score\n",
+    "from lightgbm import LGBMClassifier\n",
+    "import numpy as np\n",
+    "\n",
+    "skf = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)\n",
+    "oof_preds = np.zeros(len(df_train))\n",
+    "test_preds = np.zeros(len(df_test))\n",
+    "\n",
+    "for fold, (train_idx, val_idx) in enumerate(skf.split(X, y)):\n",
+    "    X_tr, X_val = X[train_idx], X[val_idx]\n",
+    "    y_tr, y_val = y[train_idx], y[val_idx]\n",
+    "\n",
+    "    model = LGBMClassifier(n_estimators=500, learning_rate=0.05, random_state=fold)\n",
+    "    model.fit(X_tr, y_tr)\n",
+    "\n",
+    "    oof_preds[val_idx] = model.predict_proba(X_val)[:, 1]\n",
+    "    test_preds += model.predict_proba(X_test)[:, 1] / skf.n_splits\n",
+    "\n",
+    "    score = roc_auc_score(y_val, oof_preds[val_idx])\n",
+    "    print(f\"Fold {fold+1} AUC: {score:.4f}\")\n",
+    "\n",
+    "print(\"\\n✅ Mean OOF AUC:\", roc_auc_score(y, oof_preds))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a8e79963",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-07-30T10:17:18.654456Z",
+     "iopub.status.busy": "2025-07-30T10:17:18.653521Z",
+     "iopub.status.idle": "2025-07-30T10:17:18.665700Z",
+     "shell.execute_reply": "2025-07-30T10:17:18.664739Z"
+    },
+    "papermill": {
+     "duration": 0.017347,
+     "end_time": "2025-07-30T10:17:18.667471",
+     "exception": false,
+     "start_time": "2025-07-30T10:17:18.650124",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ submission.csv başarıyla oluşturuldu.\n"
+     ]
+    }
+   ],
+   "source": [
     "submission = pd.DataFrame({\n",
     "    'row_id': df_test['row_id'],\n",
-    "    'rule_violation': y_pred\n",
+    "    'rule_violation': test_preds\n",
     "})\n",
     "submission.to_csv(\"submission.csv\", index=False)\n",
-    "print(\"✅ submission.csv oluşturuldu.\")\n"
+    "print(\"✅ submission.csv başarıyla oluşturuldu.\")\n"
    ]
   }
  ],
@@ -230,14 +368,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 61.083385,
-   "end_time": "2025-07-30T10:02:08.259794",
+   "duration": 86.128352,
+   "end_time": "2025-07-30T10:17:21.491817",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2025-07-30T10:01:07.176409",
+   "start_time": "2025-07-30T10:15:55.363465",
    "version": "2.6.0"
   }
  },
